[tool.poetry]
name = "transitions-anyio"
version = "0.3.0b1"
description = "An extension for the transitions state machine library which runs asynchronous state machines using anyio."
authors = ["Alexander Neumann <aleneum@gmail.com>", "Omer Katz <omer.drow@gmail.com>"]
maintainers = ["Omer Katz <omer.drow@gmail.com>"]
readme = "README.rst"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
transitions = "^0.8.6"
anyio = "^3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
trio = "*"
graphviz = "^0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
